[tool.poetry]
name = "continuedev"
version = "0.1.2"
description = ""
authors = ["Nate Sesti <sestinj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
diff-match-patch = "^20230430"
fastapi = "^0.95.1"
typer = "^0.7.0"
openai = "^0.27.5"
boltons = "^23.0.0"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
nest-asyncio = "^1.5.6"
websockets = "^11.0.2"
urllib3 = "1.26.15"
gpt-index = "^0.6.8"
posthog = "^3.0.1"
tiktoken = "^0.4.0"
jsonref = "^1.1.0"
jsonschema = "^4.17.3"
directory-tree = "^0.0.3.1"
anthropic = "^0.3.4"
chevron = "^0.14.0"
psutil = "^5.9.5"
meilisearch = "^0.28.1"
pygithub = "^1.59.0"
func-timeout = "^4.3.5"

[tool.poetry.scripts]
typegen = "src.continuedev.models.generate_json_schema:main" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
