# If you already have [package] information in `Cargo.toml`, you can ignore
# this section!
[package]
# `name` here is name of the package.
name = "continuedev"
# these are good defaults:
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "continuedev"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
hex-literal = "0.4.1"
homedir = "0.2.1"
ignore = "0.4.20"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha1 = "0.10.6"

[dev-dependencies]
tempfile = "3.8.1"
