[tool.poetry]
name = "continuedev"
version = "0.1.101"
description = ""
authors = ["Nate Sesti <sestinj@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8.1"
openai = "^0.27.5"
boltons = "^23.0.0"
pydantic = "^1.10.8"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
nest-asyncio = "^1.5.6"
websockets = "^11.0.2"
urllib3 = "1.26.15"
posthog = "^3.0.1"
tiktoken = "^0.4.0"
jsonref = "^1.1.0"
jsonschema = "^4.17.3"
directory-tree = "^0.0.3.1"
anthropic = "^0.3.4"
chevron = "^0.14.0"
psutil = "^5.9.5"
pygithub = "^1.59.0"
meilisearch-python-async = "^1.4.8"
socksio = "^1.0.0"
ripgrepy = "^2.0.0"
bs4 = "^0.0.1"
replicate = "^0.11.0"
redbaron = "^0.9.2"
python-lsp-server = "^1.7.4"
huggingface-hub = "^0.16.4"
typer = "^0.9.0"
chromadb = "^0.4.12"
fastapi = "0.95.2"
tree-sitter = "^0.20.2"
tree-sitter-languages = "^1.7.0"
rich = "^13.6.0"
python-socketio = "^5.10.0"
pathspec = "^0.11.2"
tqdm = "^4.66.1"
html2text = "^2020.1.16"

[tool.poetry.scripts]
typegen = "continuedev.models.generate_json_schema:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
